replaced deprecated Integer and Double constructor calls with static valueOf() calls